--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script   src="http://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
+    <script   src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
@@ -60,7 +60,7 @@
                 $(".btn").on("click", function(){
                     carClick = $(this).val()
                     console.log(this)
-                    gifURL = "http://api.giphy.com/v1/gifs/search?q=" + carClick + burnout + "&api_key=oJxy9LUc6rHE00XPULNNkjFxbohHISwL&limit=10"
+                    gifURL = "https://api.giphy.com/v1/gifs/search?q=" + carClick + burnout + "&api_key=oJxy9LUc6rHE00XPULNNkjFxbohHISwL&limit=10"
                     $.ajax({
                         url: gifURL,
                         method: "Get",
